2011-07-24  Robert Larice
 * src/xspice/ipc/ipcstdio.c :
   (int) cast, where size can be expected to be small enough

2011-07-24  Robert Larice
 * src/misc/util.c :
   use size_t

2011-07-24  Robert Larice
 * src/spicelib/parser/inp2m.c :
   avoid incorrect bindnodes when falling back to a 4 node device
     thats a polish of saj's fix from 2003-07-23

2011-07-24  Robert Larice
 * src/spicelib/devices/bsim3soi_dd/b3soiddld.c :
   bug fix, incomplete check for NAN
     did this `TURKEY' try to fool the poor old man's eyes, who is named `Alberto' ?

2011-07-24  Robert Larice
 * src/spicelib/analysis/acan.c ,
 * src/spicelib/analysis/dctran.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/analysis/noisean.c :
   polish saj's resume fix, use it for `acan' as well
     saj's fix was applied 2003-07-23 19:36
     avoid (non)-usage of uninitialized variables
   FIXME, get rid of the `evil' number `666', find a better solution

2011-07-24  Robert Larice
 * src/spicelib/analysis/noisean.c :
   bug fix, stepsize in `noisean'

2011-07-23  Robert Larice
 * src/frontend/resource.c ,
 * src/frontend/resource.h :
   use #include <inttypes.h> and size_t for portability

2011-07-23  Robert Larice
 * src/xspice/cm/cmutil.c :
   fix usage of an uninitialized variable

2011-07-23  Robert Larice
 * src/spicelib/analysis/cktsens.c :
   fix usage of an uninitialized variable

2011-07-23  Robert Larice
 * src/ciderlib/oned/oneprint.c ,
 * src/ciderlib/twod/twoprint.c :
   use #include <inttypes.h> to platform independent print 'size_t' variables

2011-07-23  Robert Larice
 * autogen.sh :
   update for --adms3

2011-07-23  Dietmar Warning
 * ngspiceMODULE.c.xml, ngspiceMakefile.am.xml: lower case substitution in xml module
   instead with perl in make process

2011-07-22  Laurent Lemaitre
 * ngspice.xml: add code to create Makefile.am using flag --create_makefile_am
   at admsXml command line

2011-07-21  Laurent Lemaitre
 * ngspice.xml: resync with adms api changes
